--- a/My Map/index.html
+++ b/My Map/index.html
@@ -5,15 +5,24 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf8" />
         <meta name="viewport" content="width=device-width, initial-scale=1"/> 
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" />
-        <link rel="stylesheet" href="index.css" />
+        <link href='https://api.mapbox.com/mapbox.js/v3.1.1/mapbox.css' rel='stylesheet' />
+        <link rel="stylesheet" href="assets/css/index.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.css" />
+
         <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"></script>
-        <script src="index.js"></script>
-        <script src="config.js"></script>
-        <script src="map.js"></script>
+        <script src='https://api.mapbox.com/mapbox.js/v3.1.1/mapbox.js'></script>
+        <script src="assets/js/index.js"></script>
+        <script src="assets/js/config.js"></script>
+        <script src="assets/js/map.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/leaflet@1.7"></script>
+        <script src="src/L.Control.Locate.js" ></script>
+
     </head>
 
     <body  onload="init();">
         <!-- 想要整個頁面都是地圖，所以我在這邊用 style="width: 100%;"填滿寬 -->
         <div id="map"></div>
+
+        
     </body>
 </html>
