--- a/My Map/index.html
+++ b/My Map/index.html
@@ -29,7 +29,7 @@
         <div id="map"></div>
 
         <div class="frame">
-            <div class="setting" id="5487">
+            <div class="setting">
                 <ul>
                     <li>
                         <label>設定間隔距離</label><input id="interval_of_distance_set_by_user" type="text"></input><label> 單位: </label>
@@ -63,7 +63,6 @@
                 <ul id="log_msg"></ul>
             </div>
         </div>
-
         
 
         <script type='application/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.2.3/leaflet.draw.js'></script> 
